--- a/biblio.bib
+++ b/biblio.bib
@@ -295,7 +295,7 @@
 @ARTICLE{Fraley00model-basedclustering,
     author = {Chris Fraley and Adrian E. Raftery},
     title = {Model-Based Clustering, Discriminant Analysis, and Density Estimation},
-    journal = {JOURNAL OF THE AMERICAN STATISTICAL ASSOCIATION},
+    journal = {Journal of the American Statistical Association},
     year = {2000},
     volume = {97},
     pages = {611--631}
