--- a/paper.tex
+++ b/paper.tex
@@ -758,7 +758,7 @@ GMM models for each fold.
     processing,  developed by  the  French Space  Agency (CNES).   The
     feature selection algorithm  can be installed as  a remote module,
     the           source            code           is           freely
-    available\footnote{\url{https://github.com/Laadr/otbFFSforGMM}}.
+    available\footnote{\url{https://www.orfeo-toolbox.org/external-projects/}}.
 
     Following OTB framework, two application are available. The first,
     called  \texttt{otbcli\_TrainGMMSelectionApp}, performs  a feature
@@ -1146,13 +1146,13 @@ To cope with the large volume of data during the learning step, updates rules fr
 
 Experiments have been conducted on two real high dimensional data set, and the results have been compared to standards classifiers. Results show that the proposed approach  performs, in most cases, at least as best as classifiers (Random Forest) and even outperforms all of them in term of classification time.
 
-The resulting code is available as a remote module of the Orfeo toolbox on Github and makes it possible to process large high dimensional images efficiently. The \texttt{C++} code is freely available for download: \url{https://github.com/Laadr/otbFFSforGMM}.
+The resulting code is available as a remote module of the Orfeo toolbox on Github and makes it possible to process large high dimensional images efficiently. The \texttt{C++} code is freely available for download: \url{https://www.orfeo-toolbox.org/external-projects/}.
 
 Perspectives of this work concern the selection of continuous interval of features rather than a single feature~\cite{serpico2007extraction,1468090}. It will be of  highest interest for continuous features, such as temporal feature or spectral feature.
 
 % Finally, an improvement could be made to increase the stability of the selected features. For example, with hyperspectral data, a selection of continuous intervals and not band is a possible solution which has already been explored in \cite{serpico2007extraction}.
 
-% The python and C++ code are available freely for download: \url{https://github.com/Laadr/FFFS}, .
+% The python and C++ code are available freely for download: \url{https://www.orfeo-toolbox.org/external-projects/}, .
 
 \appendices
 \section{Proof of update rules}
