--- a/biblio.bib
+++ b/biblio.bib
@@ -521,3 +521,12 @@ keywords={image classification;vegetation mapping;band reduction technique;band 
 doi={10.1109/LGRS.2005.848511},
 ISSN={1545-598X},
 month={July},}
+
+@article{mann1947test,
+  title={On a test of whether one of two random variables is stochastically larger than the other},
+  author={Mann, Henry B and Whitney, Donald R},
+  journal={The annals of mathematical statistics},
+  pages={50--60},
+  year={1947},
+  publisher={JSTOR}
+}
